--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Lora:wght@500&family=Space+Grotesk:wght@300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
