--- a/src/components/FAQs.css
+++ b/src/components/FAQs.css
@@ -1,6 +1,8 @@
 details > .questions::after {
     float: right;
     content: url("../down-arrow.svg");
+    position: relative;
+    bottom: 9px;
   }
   
   details[open] > .questions::after {
